syntax = "proto3";

option csharp_namespace = "Proto.Command.UseCases";

service UseCaseCommandProtoService {
  rpc CreateTimeSlotControl (CreateTimeSlotControlCommandProto) returns (CommandResponse);
}

message CreateTimeSlotControlCommandProto {
  string ticketId = 1;
}

message CommandResponse {
  bool success = 1;
}
